--- a/Pipfile
+++ b/Pipfile
@@ -34,6 +34,8 @@ MarkupSafe = "==0.23"
 PyJWT = "==1.4.2"
 SQLAlchemy = "==1.1.4"
 Werkzeug = "==0.11.13"
+pymongo = "*"
+dnspython = "*"
 
 [requires]
 python_version = "3.6"
