--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bcrypt==3.1.2
 cffi==1.9.1
 click==6.6
 coverage==4.2
+dnspython==1.16.0
 Flask==0.12
 Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.3
@@ -20,6 +21,7 @@ MarkupSafe==0.23
 mysqlclient==1.4.2.post1
 pycparser==2.17
 PyJWT==1.4.2
+pymongo==3.7.2
 python-dotenv==0.10.1
 python-editor==1.0.3
 pytz==2018.9
